java is also finished